# tg_bot_system_information

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/telegramBot/: telegramBot.h
tests/: CMakeLists.txt
